# dataops-mcp-server

./: .dockerignore  .gitignore  MCP_USAGE_GUIDE.md  NOTICE  README.md  pyproject.toml  working_demo.py
.github/ISSUE_TEMPLATE/: feature_request.yml
config/: .env.template  README.md  development.yaml  settings.py
deployment/docker/: Dockerfile.mcp-server
docs/: ai-integration.md  args.md  features.md  gcp-config.md  integration.md  permissions.md  usage.md
src/: client.py
src/dataops-mcp-server/: logger.py
src/dataops-mcp-server/tools/: anomaly_detection_tools.py  bigquery_analysis_tools.py  bigquery_client.py  bigquery_core.py  bigquery_tools.py  bigquery_wrapper.py  cost_analysis_tools.py  cost_intelligence_engine.py  cost_optimization_tools.py  cost_optimizer_tools.py  enhanced_architecture.py  optimization_tools.py  pr_creation_tools.py
src/mcp_servers/: __init__.py  server.py
src/mcp_servers/tools/common/: base_tool.py
tests/: test_bigquery_tools.py  test_mcp_server.py
tests/integration_tests/: test_end_to_end.py
